update to OpenJDK 21, Gradle 8.4-rc-1